one spacing fix I overlooked

--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -80,7 +80,7 @@ p {
   /* display: inline-block; */
   font-size: 1em;
   border-radius: 3px;
-  margin: 15px 15px 5px 0px; 
+  margin: 0px 15px 5px 0px; 
   width: 107px;
 }
 
@@ -112,7 +112,7 @@ label {
 
 .textbox-container {
   display: flex;
-  margin: 15px 0px 5px 15px;
+  margin: 0px 0px 5px 15px;
   width: 107px;
   border-radius: 3px;
   justify-content: flex-start;
